--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="trustpilot-one-time-domain-verification-id" content="4c2a9765-203d-4ecf-894f-153f4b0acb0f"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rate Our Service</title>
